# Django

./: 2SerializerField.txt  3Deserialization.txt  requirements.txt  restapi.txt
10GraphQL/: pyproject.toml
10GraphQL/GraphQL/GraphQL/: asgi.py  settings.py  urls.py  wsgi.py
10GraphQL/GraphQL/apps/cards/: models.py
10GraphQL/GraphQL/apps/cards/migrations/: 0001_initial.py
10GraphQL/GraphQL/apps/decks/: admin.py  models.py
10GraphQL/GraphQL/apps/decks/migrations/: 0001_initial.py
10GraphQL/GraphQL/apps/schema/: schema.py
10GraphQL/GraphQL/apps/users/: models.py
10GraphQL/GraphQL/apps/users/migrations/: 0001_initial.py
10GraphQL/GraphQL/apps/utils/: models.py
11CustomDjangoSignals/: readme.md
12DRF/: db.sqlite3
12DRF/DRF/: urls.py  (+1 more)
14graphql_revision/: manage.py
2Deserialization/: POSTdata.py  db.sqlite3
3crudapi/: SENDREQUEST.py  db.sqlite3  myapp.py
4BasicAuthentication/: db.sqlite3
5SessionAuthentication/: db.sqlite3
6djangorestframework/: db.sqlite3
7object_oriented_programming_in_python/: 01_solution__init__method.py  02_solution_return_fullname.py  03_solution_inheritence.py  04_solution_encapsulation.py  05_solution_polymorphism.py  06_solution_class_variable.py  07_solution_static_method.py  08_solution_property_decorator.py  09_solution_isInstance().py  10_solution_multiple_inheritence.py  tempCodeRunnerFile.py
8decorators_in_python/: 01_timing_function_execution.py  02_print_function_name.py
9GraphqlTodoProject/: Pipfile
Deserialization/: manage.py
py_server_client/: basic.py
trainingSerializers/: db.sqlite3  manage.py
(+76 files in other folders)
