[tool.poetry]
name = "graphql"
version = "0.1.0"
description = ""
authors = ["Yash Chauhan <Yash.chauhan@mechlintech.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.10"
django = "^5.1.2"
psycopg2-binary = "^2.9.10"
graphene-django = "^3.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
